--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Airspeed Alive Supply</title>
 </head>
 <body>
+<!--Navigation-->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Airspeed Alive Supply</a>
@@ -19,24 +20,63 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
             <span class="navbar-text">
-              Navbar text with an inline element
+                <i class="fa-brands fa-instagram"></i>
             </span>
           </div>
         </div>
       </nav>
-    <h1>hello</h1>
+<!--Header-->
+  <header>
+    <img src="" alt="Bird Skull Graphic">
+    <h1>Airspeed Alive Supply</h1>
+    <h2>Vintage Aviation Apparel</h2>
+    <a href="#signup">Sign Up for 10% Off</a>
+  </header>
+<!--Main Body Content-->
+  <section class="row birthday">
+    <div class="col-4">
+      <h3>//</h3>
+    </div>
+    <div class="col-4">
+      <h4>July</h4>
+      <h3>Happy Birthday<br>Bradley!</h3>
+      <p>Happy Birthday Bradley! I wanted you to know that I support your goals and vision for your careers, our lives, and Airspeed Alive Supply.</p>
+    </div>
+    <div class="col-4">
+      <h3>//</h3>
+    </div>
+  </section>
+  <h3>Ready to Launch in 2024</h3>
+  <section class="row gallery">
+    <img src="" alt="Man with Black Shirt">
+    <img src="" alt="Man with White Shirt">
+    <img src="" alt="Man with Black Shirt, Back of shirt">
+  </section>
+  <section class="row">
+    <div class="col-4">
+      <h3>The Story behind the shirts.     //</h3>
+      <p>We discovered a problem. The market for up to date, stylized apperal for pilots was seriously laking. So we're here to be your one stop shirt shop for all things aviation.</p>
+    </div>
+    <div class="col-8 image-row"></div>
+  </section>
+      
+
+    <script src="https://kit.fontawesome.com/c92d59f58b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
