--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<meta name="description" content="We are Airspeed Alive Supply. Your one stop shirt shop for vintage aviation apparel.">
 <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,400;1,700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/style.css">
@@ -24,11 +25,20 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
+              <li class="nav-item slash">
+                <h5>/</h5>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Products</a>
               </li>
+              <li class="nav-item slash">
+                <h5>/</h5>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item slash">
+                <h5>/</h5>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -45,9 +55,9 @@
     <img src="" alt="Bird Skull Graphic">
     <h1>Airspeed Alive Supply</h1>
     <h2>Vintage Aviation Apparel</h2>
-    <a href="#signup">Sign Up for 10% Off</a>
+    <a href="#signup" title="Sign Up Button">Sign Up for 10% Off</a>
   </header>
-<!--Main Body Content-->
+<!--Intro Content-->
   <section class="row birthday">
     <div class="col-4">
       <h3>//</h3>
@@ -55,18 +65,21 @@
     <div class="col-4">
       <h4>July</h4>
       <h3>Happy Birthday<br>Bradley!</h3>
+      <h4>Fifteenth</h4>
       <p>Happy Birthday Bradley! I wanted you to know that I support your goals and vision for your careers, our lives, and Airspeed Alive Supply.</p>
     </div>
     <div class="col-4">
       <h3>//</h3>
     </div>
   </section>
+<!--Product Gallery-->
   <h3>Ready to Launch in 2024</h3>
   <section class="row gallery">
     <img src="" alt="Man with Black Shirt">
     <img src="" alt="Man with White Shirt">
     <img src="" alt="Man with Black Shirt, Back of shirt">
   </section>
+<!--The Story-->
   <section class="row">
     <div class="col-4">
       <h3>The Story behind the shirts.     //</h3>
@@ -74,8 +87,46 @@
     </div>
     <div class="col-8 image-row"></div>
   </section>
-      
-
+<!--Sign Up Form-->    
+  <section class="row">
+    <div class="col-4">
+      <h3>Want 10% off your first order?</h3>
+    </div>
+    <div class="col-8">
+      <h4>Send us your email and we’ll give you 10% off your first order. Plus, you’ll be the first to know when our products drop.</h4>
+      <form class="row g-3">
+        <div class="col-auto">
+          <label for="inputEmail" class="visually-hidden">Email</label>
+          <input type="text" class="form-control" id="staticEmail2" placeholder="email@example.com">
+        </div>
+        <div class="col-auto">
+          <label for="inputPassword" class="visually-hidden">Password</label>
+          <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+        </div>
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary mb-3">Submit</button>
+        </div>
+      </form>
+    </div>
+  </section>
+<!--Footer-->   
+  <footer class="row">
+    <div class="col-2">
+      <img src="" alt="Flower Icon Outline">
+    </div>
+    <div class="col-8">
+      <h2 class="text-center">
+        <a href="#">Home</a> / 
+        <a href="#">Products</a> /
+        <a href="#">About</a> /
+        <a href="#">Contact</a>
+      </h2>
+    </div>
+    <div class="col-2">
+      <img src="" alt="Flower Icon Outline">
+    </div>
+  </footer>
+<!--Script: Font Awesome, Bootstrap-->    
     <script src="https://kit.fontawesome.com/c92d59f58b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
