--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-                <i class="fa-brands fa-instagram"></i>
+              <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram"></i></a>
             </span>
           </div>
         </div>
@@ -114,13 +114,14 @@
     <div class="col-2">
       <img src="" alt="Flower Icon Outline">
     </div>
-    <div class="col-8">
-      <h2 class="text-center">
+    <div class="col-8 text-center">
+      <h2>
         <a href="#">Home</a> / 
         <a href="#">Products</a> /
         <a href="#">About</a> /
         <a href="#">Contact</a>
       </h2>
+      <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram"></i></a>
     </div>
     <div class="col-2">
       <img src="" alt="Flower Icon Outline">
