Added images, additional html pages

--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
 <!--Product Gallery-->
   <h3>Ready to Launch in 2024</h3>
   <section class="row gallery">
-    <img src="" alt="Man with Black Shirt">
-    <img src="" alt="Man with White Shirt">
-    <img src="" alt="Man with Black Shirt, Back of shirt">
+    <div class="col-4">
+      <img src="/images/ManwithBlackShirt.png" alt="Man with Black Shirt">
+    </div>
+    <div class="col-4">
+      <img src="/images/ManwithWhiteShirt.png" alt="Man with White Shirt">
+    </div>
+    <div class="col-4">
+      <img src="/images/ManwithBlackShirt-Back.png" alt="Man with Black Shirt, Back of shirt">
+    </div>
   </section>
 <!--The Story-->
   <section class="row">
@@ -88,7 +94,7 @@
     <div class="col-8 image-row"></div>
   </section>
 <!--Sign Up Form-->    
-  <section class="row">
+  <section class="row" id="signup">
     <div class="col-4">
       <h3>Want 10% off your first order?</h3>
     </div>
