--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!--Navigation-->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Airspeed Alive Supply</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,20 +45,24 @@
               </li>
             </ul>
             <span class="navbar-text">
-              <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram ps-5"></i></a>
             </span>
           </div>
         </div>
       </nav>
 <!--Header-->
-  <header>
-    <img src="" alt="Bird Skull Graphic">
-    <h1>Airspeed Alive Supply</h1>
-    <h2>Vintage Aviation Apparel</h2>
-    <a href="#signup" title="Sign Up Button">Sign Up for 10% Off</a>
+  <header class="row">
+    <div class="col-5">
+      <img src="/images/BirdSkullBadge.svg" alt="Bird Skull Graphic">
+    </div>
+    <div class="col-7 ps-5 pt-5">
+      <h1>Airspeed Alive Supply</h1>
+      <h2>Vintage Aviation Apparel</h2>
+      <a href="#signup" title="Sign Up Button">Sign Up for 10% Off</a>
+    </div>
   </header>
 <!--Intro Content-->
-  <section class="row birthday">
+  <section class="row birthday text-center">
     <div class="col-4">
       <h3>//</h3>
     </div>
@@ -73,8 +77,10 @@
     </div>
   </section>
 <!--Product Gallery-->
-  <h3>Ready to Launch in 2024</h3>
-  <section class="row gallery">
+  <section class="row gallery text-center">
+    <div class="col-12">
+      <h3>Ready to Launch in 2024</h3>
+    </div>
     <div class="col-4">
       <img src="/images/ManwithBlackShirt.png" alt="Man with Black Shirt">
     </div>
@@ -120,7 +126,7 @@
     <div class="col-2">
       <img src="" alt="Flower Icon Outline">
     </div>
-    <div class="col-8 text-center">
+    <div class="col-8 text-center navbar-text">
       <h2>
         <a href="#">Home</a> / 
         <a href="#">Products</a> /
