--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="col-5">
       <img src="/images/BirdSkullBadge.svg" alt="Bird Skull Graphic">
     </div>
-    <div class="col-7 ps-5 pt-5">
+    <div class="col-7 ps-2 pt-5">
       <h1>Airspeed Alive Supply</h1>
       <h2>Vintage Aviation Apparel</h2>
       <a href="#signup" title="Sign Up Button">Sign Up for 10% Off</a>
@@ -68,29 +68,33 @@
     </div>
     <div class="col-4">
       <h4>July</h4>
-      <h3>Happy Birthday<br>Bradley!</h3>
+      <h3 class="pt-3 pb-3">Happy Birthday<br>Bradley!</h3>
       <h4>Fifteenth</h4>
-      <p>Happy Birthday Bradley! I wanted you to know that I support your goals and vision for your careers, our lives, and Airspeed Alive Supply.</p>
+      <p class="pt-3">Happy Birthday Bradley! I wanted you to know that I support your goals and vision for your careers, our lives, and Airspeed Alive Supply.</p>
     </div>
     <div class="col-4">
       <h3>//</h3>
     </div>
   </section>
 <!--Product Gallery-->
-  <section class="row gallery text-center">
-    <div class="col-12">
+<div class="gallery">
+  <section class="row text-center">
+    <div class="col-12 mb-4">
       <h3>Ready to Launch in 2024</h3>
     </div>
+  </section>
+  <section class="row product-images">
     <div class="col-4">
-      <img src="/images/ManwithBlackShirt.png" alt="Man with Black Shirt">
+      <img src="/images/ManwithBlackShirt.png" alt="Man with Black Shirt" class="img-fluid rounded">
     </div>
     <div class="col-4">
-      <img src="/images/ManwithWhiteShirt.png" alt="Man with White Shirt">
+      <img src="/images/ManwithWhiteShirt.png" alt="Man with White Shirt" class="img-fluid rounded">
     </div>
     <div class="col-4">
-      <img src="/images/ManwithBlackShirt-Back.png" alt="Man with Black Shirt, Back of shirt">
+      <img src="/images/ManwithBlackShirt-Back.png" alt="Man with Black Shirt, Back of shirt" class="img-fluid rounded">
     </div>
   </section>
+</div>
 <!--The Story-->
   <section class="row">
     <div class="col-4">
@@ -122,21 +126,21 @@
     </div>
   </section>
 <!--Footer-->   
-  <footer class="row">
+  <footer class="row text-center pt-5 pb-4">
     <div class="col-2">
-      <img src="" alt="Flower Icon Outline">
+      <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline">
     </div>
     <div class="col-8 text-center navbar-text">
-      <h2>
-        <a href="#">Home</a> / 
-        <a href="#">Products</a> /
-        <a href="#">About</a> /
-        <a href="#">Contact</a>
-      </h2>
-      <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram"></i></a>
+      <div class="footer-menu">
+        <a href="/index.html">Home</a> / 
+        <a href="/products.html">Products</a> /
+        <a href="/about.html">About</a> /
+        <a href="/contact.html">Contact</a>
+      </div>
+      <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram footer-insta"></i></a>
     </div>
     <div class="col-2">
-      <img src="" alt="Flower Icon Outline">
+      <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline">
     </div>
   </footer>
 <!--Script: Font Awesome, Bootstrap-->    
