--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<meta name="description" content="We are Airspeed Alive Supply. Your one stop shirt shop for vintage aviation apparel.">
+<link rel="icon" type="image/x-icon" href="/images/PaperPlaneFavicon.svg">
+<meta name="description" content="We are Airspeed Alive Supply. Your one stop shirt shop for premium aviation apparel.">
 <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,400;1,700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/style.css">
@@ -14,7 +15,7 @@
 </head>
 <body>
 <!--Navigation-->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg ps-5 pe-5">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Airspeed Alive Supply</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,71 +46,71 @@
               </li>
             </ul>
             <span class="navbar-text">
-              <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram ps-5"></i></a>
+              <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram"></i></a>
             </span>
           </div>
         </div>
       </nav>
 <!--Header-->
   <header class="row">
-    <div class="col-5">
-      <img src="/images/BirdSkullBadge.svg" alt="Bird Skull Graphic">
+    <div class="col-md-5">
+      <img src="/images/BirdSkullBadge.svg" alt="Bird Skull Graphic" class="img-fluid">
     </div>
-    <div class="col-7 ps-2 pt-5">
+    <div class="col-md-7 ps-2">
       <h1>Airspeed Alive Supply</h1>
-      <h2>Vintage Aviation Apparel</h2>
+      <h2>Premium Aviation Apparel</h2>
       <a href="#signup" title="Sign Up Button">Sign Up for 10% Off</a>
     </div>
   </header>
 <!--Intro Content-->
   <section class="row birthday text-center">
-    <div class="col-4">
+    <div class="col-md-4">
       <h3>//</h3>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <h4>July</h4>
       <h3 class="pt-3 pb-3">Happy Birthday<br>Bradley!</h3>
       <h4>Fifteenth</h4>
       <p class="pt-3">Happy Birthday Bradley! I wanted you to know that I support your goals and vision for your careers, our lives, and Airspeed Alive Supply.</p>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <h3>//</h3>
     </div>
   </section>
 <!--Product Gallery-->
 <div class="gallery">
   <section class="row text-center">
-    <div class="col-12 mb-4">
-      <h3>Ready to Launch in 2024</h3>
+    <div class="col-md-12 mb-4">
+      <h3 class="ps-5 pe-5">Ready to Launch in 2024</h3>
     </div>
   </section>
   <section class="row product-images">
-    <div class="col-4">
+    <div class="col-md-4">
       <img src="/images/ManwithBlackShirt.png" alt="Man with Black Shirt" class="img-fluid rounded">
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <img src="/images/ManwithWhiteShirt.png" alt="Man with White Shirt" class="img-fluid rounded">
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <img src="/images/ManwithBlackShirt-Back.png" alt="Man with Black Shirt, Back of shirt" class="img-fluid rounded">
     </div>
   </section>
 </div>
 <!--The Story-->
-  <section class="row">
-    <div class="col-4">
+  <section class="row story-section">
+    <div class="col-md-4 story-paragraph">
       <h3>The Story behind the shirts.     //</h3>
-      <p>We discovered a problem. The market for up to date, stylized apperal for pilots was seriously laking. So we're here to be your one stop shirt shop for all things aviation.</p>
+      <p>We discovered a problem. The market for up to date, premium apperal for pilots was seriously laking. So we're here to be your one stop shirt shop for all things aviation.</p>
     </div>
-    <div class="col-8 image-row"></div>
+    <div class="col-md-8 story-img"></div>
   </section>
 <!--Sign Up Form-->    
-  <section class="row" id="signup">
-    <div class="col-4">
-      <h3>Want 10% off your first order?</h3>
+  <section class="row signup">
+    <div class="col-md-4">
+      <h3>Want 10% off<br/>your first order?</h3>
     </div>
-    <div class="col-8">
-      <h4>Send us your email and we’ll give you 10% off your first order. Plus, you’ll be the first to know when our products drop.</h4>
+    <div class="col-md-8">
+      <h4>Send us your email and we’ll give you 10% off your first order. <br/> Plus, you’ll be the first to know when our products drop.</h4>
       <form class="row g-3">
         <div class="col-auto">
           <label for="inputEmail" class="visually-hidden">Email</label>
@@ -120,17 +121,17 @@
           <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
         </div>
         <div class="col-auto">
-          <button type="submit" class="btn btn-primary mb-3">Submit</button>
+          <button type="submit" class="btn submit-btn mb-3">Submit</button>
         </div>
       </form>
     </div>
   </section>
 <!--Footer-->   
   <footer class="row text-center pt-5 pb-4">
-    <div class="col-2">
-      <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline">
+    <div class="col-md-2">
+      <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline" class="flower-top">
     </div>
-    <div class="col-8 text-center navbar-text">
+    <div class="col-md-8 text-center">
       <div class="footer-menu">
         <a href="/index.html">Home</a> / 
         <a href="/products.html">Products</a> /
@@ -139,8 +140,8 @@
       </div>
       <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram footer-insta"></i></a>
     </div>
-    <div class="col-2">
-      <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline">
+    <div class="col-md-2">
+      <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline" class="flower-bottom">
     </div>
   </footer>
 <!--Script: Font Awesome, Bootstrap-->    
