--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="col-md-7 ps-2">
       <h1>Airspeed Alive Supply</h1>
       <h2>Premium Aviation Apparel</h2>
-      <a href="#signup" title="Sign Up Button">Sign Up for 10% Off</a>
+      <a href="/#signup" title="Sign Up Button">Sign Up for 10% Off</a>
     </div>
   </header>
 <!--Intro Content-->
@@ -105,7 +105,7 @@
     <div class="col-md-8 story-img"></div>
   </section>
 <!--Sign Up Form-->    
-  <section class="row signup">
+  <section class="row signup" id="signup">
     <div class="col-md-4">
       <h3>Want 10% off<br/>your first order?</h3>
     </div>
