--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/airspeedalive.supply/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </span>
           </div>
         </div>
@@ -138,7 +138,7 @@
         <a href="/about.html">About</a> /
         <a href="/contact.html">Contact</a>
       </div>
-      <a href="https://www.instagram.com/airspeedalive.supply/"><i class="fa-brands fa-instagram footer-insta"></i></a>
+      <a href="https://www.instagram.com/airspeedalive.supply/" target="_blank"><i class="fa-brands fa-instagram footer-insta"></i></a>
     </div>
     <div class="col-md-2">
       <img src="/images/FlowerIconOutline.svg" alt="Flower Icon Outline" class="flower-bottom">
