--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       <a href="/#signup" title="Sign Up Button">Sign Up for 10% Off</a>
     </div>
   </header>
+  <div class="plane-img"><br>
+  </div>
 <!--Intro Content-->
   <section class="row birthday text-center">
     <div class="col-md-4">
