Fixed issue of flower display none on med screen

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!--Sign Up Form-->    
   <section class="row signup" id="signup">
     <div class="col-md-4">
-      <h3>Want 10% off<br/>your first order?</h3>
+      <h3>Want 10% off your first order?</h3>
     </div>
     <div class="col-md-8">
       <h4>Send us your email and we’ll give you 10% off your first order. <br/> Plus, you’ll be the first to know when our products drop.</h4>
