Updated product page styling

--- a/products.html
+++ b/products.html
@@ -54,10 +54,10 @@
 <!--Header-->
   <div class="row header mb-5">
     <div class="col-md-5">
-      <img src="/images/BirdSkullBadge.svg" alt="Bird Skull Graphic" class="img-fluid">
+      <img src="/images/BirdSkullBadgeInverse.svg" alt="Bird Skull Graphic" class="img-fluid">
     </div>
     <div class="col-md-7 ps-2">
-      <h1>Product Preview</h1>
+      <h1>Products</h1>
       <h2>launching 2024</h2>
       <a href="/#signup" title="Sign Up Button">Sign Up for 10% Off</a>
     </div>
@@ -74,22 +74,9 @@
         <h3>Angle of attack</h3>
         <h4>Made to Order</h4>
         <p>Gildan Unisex shirts</p>
+        <span class="dot dot-1"></span>
+        <span class="dot dot-2"></span>
     </div>
-    </div>
-    <div class="col-md-1"></div>
-</div>
-
-<div class="row pt-5 pb-5">
-    <div class="col-md-1"></div>
-    <div class="col-md-5">
-        <div class="preview-text-2">
-            <h3>En Route</h3>
-            <h4>Made to Order</h4>
-            <p>Gildan Unisex shirts</p>
-        </div>
-    </div>
-    <div class="col-md-5">
-        <img src="/images/ManWithWhiteShirt.png" alt="Man with White Shirt" class="img-fluid rounded preview-img-2">
     </div>
     <div class="col-md-1"></div>
 </div>
@@ -107,6 +94,24 @@
     </div>
     </div>
     <div class="col-md-1"></div>
+</div>
+
+<!--CTA Section-->
+<div class="ms-5 me-5 mt-5 mb-5">
+<div class="card mb-3 ms-5 me-5" style="max-width: 100%;">
+    <div class="row g-0">
+      <div class="col-md-6">
+        <img src="/images/screenprinting.jpg" class="img-fluid rounded-start" alt="Screen Printing">
+      </div>
+      <div class="col-md-6">
+        <div class="card-body ms-4">
+          <h3 class="card-title mt-5 mb-2">Have a question?</h3>
+          <p class="card-text mb-4">You have questions, we have answers. Probably.</p>
+          <a href="/contact.html" class="button-style" title="Go To Contact Page">Reach Out</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!--Footer-->   
