Added About and Contact

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <div class="card-body ms-4">
               <h3 class="card-title mt-5 mb-2">Preview Products</h3>
               <p class="card-text mb-4">New apparel drops 2023.</p>
-              <a href="/products.html" class="button-style" title="Go To Contact Page">Check It Out</a>
+              <a href="/products.html" class="button-style" title="Go To Products Page">Check It Out</a>
             </div>
           </div>
         </div>
