--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--Navigation-->
     <nav class="navbar navbar-expand-lg ps-5 pe-5">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Airspeed Alive Supply</a>
+          <a class="navbar-brand" href="/index.html">Airspeed Alive Supply</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
